<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".view.activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorOnPrimary"
            app:elevation="0dp"
            app:menu="@menu/menu_detail_event"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/inicio" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="100dp"
            app:layout_constraintBottom_toTopOf="@+id/confirm"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/group_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="16dp"
                        android:ellipsize="end"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Title" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        app:civ_border_width="0.5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title"
                        tools:src="@tools:sample/avatars" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:drawablePadding="4dp"
                        android:textColor="@color/Goldenrod"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_calendar"
                        app:drawableTint="@color/Goldenrod"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image"
                        app:layout_constraintTop_toTopOf="@+id/image"
                        tools:text="Date" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="16dp"
                        android:drawablePadding="4dp"
                        android:textColor="@color/Goldenrod"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_time_15"
                        app:drawableTint="@color/Goldenrod"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/date"
                        app:layout_constraintTop_toBottomOf="@+id/date"
                        tools:text="Time" />

                    <ImageView
                        android:id="@+id/icon_local"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_location_15"
                        app:layout_constraintStart_toStartOf="@+id/time"
                        app:layout_constraintTop_toBottomOf="@+id/time" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        app:layout_constraintEnd_toEndOf="@+id/time"
                        app:layout_constraintStart_toEndOf="@+id/icon_local"
                        app:layout_constraintTop_toBottomOf="@+id/time"
                        tools:text="Location" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/group_description"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/group_detail">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:drawablePadding="4dp"
                        android:text="@string/title_description_of_the_event"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="4dp"
                        android:gravity="start"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/title_description"
                        app:layout_constraintStart_toStartOf="@+id/title_description"
                        app:layout_constraintTop_toBottomOf="@+id/title_description"
                        tools:text="@string/title_description_of_the_event" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:contentDescription="@string/title_confirm_presence"
            android:text="@string/title_confirm_presence"
            android:textColor="?attr/colorOnPrimary"
            android:transitionName="transition_fab"
            app:backgroundTint="?attr/colorSecondary"
            app:icon="@drawable/ic_check"
            app:iconTint="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>